--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "@tanstack/react-query": "^5.90.11",
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.1",
+    "culori": "^4.0.2",
     "dayjs": "^1.11.18",
     "lifeforge-ui": "workspace:*",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-i18next": "^15.1.1",
     "react-toastify": "^11.0.5",
     "shared": "workspace:*",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.1.9",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "vite": "^7.1.9"
