--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-i18next": "^15.1.1",
     "react-toastify": "^11.0.5",
+    "react-virtualized": "^9.22.6",
     "shared": "workspace:*",
     "tailwindcss": "^4.1.17",
     "vite": "^7.1.9",
@@ -26,6 +27,7 @@
     "@types/lodash": "^4.17.21",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/react-virtualized": "^9.22.3",
     "vite": "^7.1.9"
   }
 }
